--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -137,7 +137,9 @@
     "LEAVE_SITE": "Wenn Sie die Seite verlassen werden Ihre Daten nicht gespeichert.",
     "CANCEL_EDITMODE": "Beim Verlassen des Editiermodus verlieren Sie alle angepassten Daten.",
     "CONFIRM_BO_TRANSFER_TITLE": "Hinweis",
-    "CONFIRM_BO_TRANSFER": "Durch die Änderung der Geschäftsorganisation verlieren Sie die Berechtigung für die Bearbeitung des Objektes ab dem Mutationszeitpunkt."
+    "CONFIRM_BO_TRANSFER": "Durch die Änderung der Geschäftsorganisation verlieren Sie die Berechtigung für die Bearbeitung des Objektes ab dem Mutationszeitpunkt.",
+    "CONFIRM_VALIDITY_HAS_NOT_CHANGED_TITLE": "Achtung: Gültigkeit wurde nicht verändert!",
+    "CONFIRM_VALIDITY_HAS_NOT_CHANGED": "Sind Sie Sicher, dass Sie die Änderung ohne Anpassung der Gültigkeit vornehmen möchten? Falls die Änderung nicht für den ganzen Zeitraum dieser Version gilt, passen Sie bitte das \"gültig von\" oder \"gültig bis\" Datum an."
   },
   "SW_DIALOG": {
     "UPDATE_TITLE": "Neue Version verfügbar",
