ATLAS-1748 added test for validity-confirmation

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -40,7 +40,7 @@
     "JA": "Oui",
     "NEIN": "Non",
     "ACHTUNG": "Attention!",
-    "DATE": {F
+    "DATE": {
       "SELECT_DATERANGE": "Date de... à...*"
     },
     "FROM": "de",
